MB-38788: fix block magic as part of compaction

Compaction nuked the header created at offset 0 by
couchstore_open_db_ex and wrote all data to the file before
adding the header at the end. Unfortunately it did not update
the magic byte at offset 0 as part of that task so it still
contained the magic to identify the disk block as offset 0
as a header block (but there isn't any header there anymore)

Change-Id: Ic62ec6fe883dba6f5a45533cff7ba4d7ee70388c
Reviewed-on: http://review.couchbase.org/c/couchstore/+/125893
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Jim Walker <jim@couchbase.com>